# celluloid

./: .gitignore  .travis.yml  History.md  LICENSE  Makefile  README.md  celluloid.py  pylintrc  pyproject.toml  pytest.ini  setup.cfg  test-requirements.txt  test_celluloid.py
examples/: complex.py  legends.py  simple.py  sines.py
